<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pindah_activity"
    android:padding="16dp"
    android:background="@color/darkmode">

    <TextView
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_alignParentTop="true"
        android:textColor="@color/putih"
        android:text="@string/move_activity"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <TextView
        android:layout_below="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/pindah_activity_nothing"
        android:textSize="20sp"
        android:textColor="@color/putih"
        android:padding="16dp"/>


    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/green"
        android:text="@string/back"
        android:textColor="@color/putih"/>
</RelativeLayout>