<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/darkmode">

    <Button
        android:id="@+id/pindah_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:text="@string/pindah_activity"
        android:textColor="@color/putih"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/pindah_activity_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:text="@string/pindah_activity_data"
        android:textColor="@color/putih"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/pindah_activity_object"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:text="@string/pindah_dengan_object"
        android:textColor="@color/putih"
        android:layout_marginBottom="16dp"/>
    <Button
        android:id="@+id/dial_number_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:text="Dial a Number"
        android:textColor="@color/putih"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/moveforresult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:text="pindah activity untuk hasil"
        android:textColor="@color/putih"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/tv_moveforresult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Hasil dari Activity"
        android:textColor="@color/putih"
        android:textSize="24sp"
        android:textAlignment="center"/>

</LinearLayout>